# ws

./: README.md
server/: Cargo.toml  build.zig  build.zig.zon
server/src/: main.rs  main.zig
web/: index.html
web/scripts/: main.js
web/styles/: style.css
