[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.28", default-features = false }
tm1637-gpio-driver = "2.0.6"
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "macros", "signal"] }
warp = { version = "0.3.5", features = ["tls"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"